--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Flask==0.10.1
+flask-heroku==0.1.9
+Flask-SQLAlchemy==2.0
 gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+psycopg2==2.6.1
+SQLAlchemy==1.0.7
 Werkzeug==0.10.4
 wheel==0.24.0
