--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 alembic==0.8.1
-Flask==0.10.1
+Click==7.0
+Flask==1.0.2
+Flask-Assets==0.11
 flask-heroku==0.1.9
 Flask-Login==0.2.11
 Flask-Migrate==1.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
-gunicorn==19.3.0
-itsdangerous==0.24
-Jinja2==2.8
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10
 Mako==1.0.1
-MarkupSafe==0.23
+MarkupSafe==1.1.0
 psycopg2==2.6.1
 python-editor==0.3
 SQLAlchemy==1.0.8
-Werkzeug==0.10.4
+webassets==0.11.1
+Werkzeug==0.14.1
 wheel==0.24.0
