--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
-alembic==0.8.1
+cachetools==3.0.0
+certifi==2018.10.15
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
-Flask-Assets==0.11
 flask-heroku==0.1.9
-Flask-Login==0.2.11
-Flask-Migrate==1.5.1
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.0
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.3.2
+google-api-python-client==1.7.7
+google-auth==1.6.2
+google-auth-httplib2==0.0.3
 gunicorn==19.9.0
+httplib2==0.12.0
+idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
-Mako==1.0.1
 MarkupSafe==1.1.0
-psycopg2==2.6.1
-python-editor==0.3
-SQLAlchemy==1.0.8
-webassets==0.11.1
+oauth2client==4.1.3
+pipenv==2018.11.26
+psycopg2==2.7.6.1
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+requests==2.20.1
+rsa==4.0
+six==1.12.0
+SQLAlchemy==1.2.15
+uritemplate==3.0.0
+urllib3==1.24.1
+virtualenv==16.1.0
+virtualenv-clone==0.4.0
 Werkzeug==0.14.1
-wheel==0.24.0
